--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.0.1",
     "react": "16.13.1",
     "react-dom": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
