--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongodb": "^4.0.1",
     "react": "16.13.1",
     "react-dom": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-chart-kit": "^6.11.0",
     "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-screens": "^3.4.0",
     "react-native-select-dropdown": "^1.0.9",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
