--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-select-dropdown": "^1.0.9",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.6.5",
     "react-navigation-fluid-transitions": "^0.3.2",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
